# internet-icon

./: .anjuta_sym_db.db  Makefile  Makefile.in  README  config.h  config.status  configure  configure.ac  create_pixdata + ubuntu.txt  index.html  libtool  params.json
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  internet_icon.pot  it.gmo  it.mo  it.po
src/: .internet_icon.conf  Makefile  Makefile.am  Makefile.in  findtask.c  findtask.h  internet_icon  main.c  main.h  mylocale.h  pixbufs.c  socket.c  socket.h  utils.c  utils.h  xml.c  xml.h
src/.deps/: findtask.Po  main.Po  pixbufs.Po  socket.Po  utils.Po  xml.Po
